@startuml
skinparam monochrome true
skinparam classAttributeIconSize 0
skinparam nodesep 110

package Assembly {
  abstract class Instruction {
     TO
     AD
     OD
     OF
     executionTime
     Instruction(TO, AD, OD, OF, bullGamma)
     toLineString(): String
    {abstract} execute()
    {abstract} computeExeTime()
  }

  abstract class Operation {
    Operation(...)
  }

  abstract class OperationWithPreShift {
      OperationWithPreShift(...)
      execute()
      {abstract} _exeInstructionLogic()
  }

  abstract class SmallDivOrMult {
    SmallDivOrMult(...)
    execute()
    {abstract} _compute(mb: Memory)
    {abstract} _computeValue()
  }

  abstract class BigDivOrMult {
    BigDivOrMult(...)
    execute()
    {abstract} _compute(mb: Memory)
    {abstract} _computeValue()
  }

  abstract class DrumTransfer {
    DrumTransfer(...)
    execute()
    {abstract} _transfer(...)
  }

  Instruction <|-- Operation
  Instruction <|-- DrumTransfer
  Operation <|-- OperationWithPreShift
  Operation <|-- SmallDivOrMult
  Operation <|-- BigDivOrMult

  class BT {
    TO = 0
  }

  class TB {
    TO = 0
  }

  class V {
    TO = 0
  }

  class NOP {
    TO = 0
    AD = 0
    OF % 4 == 0
  }

  class VRS {
    TO = 1
  }

  class CO {
    TO = 1
  }

  class CSz {
    TO = 1
  }

  class CB {
    TO = 1
  }

  class ZB {
    TO = 3
  }

  class KB {
    TO = 4
  }

  class BO {
    TO = 6
  }

  class AMD {
    TO = 7
  }

  class BD {
    TO = 7
  }

  class CN {
    TO = 9
  }

  class AN {
    TO = 10
  }

  class SN {
    TO = 11
  }

  class MR {
    TO = 12
  }

  class DR {
    TO = 13
  }

  class DC {
    TO = 15
  }

  V --|> Instruction
  KB --|> Instruction
  BD --|> Instruction
  CB --|> Instruction
  AMD -|> Instruction
  Instruction <|- VRS
  Instruction <|-- CO
  Instruction <|-- CSz
  NOP --|> V

  ZB --|> Operation
  Operation <|- BO

  DrumTransfer <|-- TB
  DrumTransfer <|-- BT

  OperationWithPreShift <|-- SN
  OperationWithPreShift <|-- CN
  OperationWithPreShift <|-- AN

  SmallDivOrMult <|-- MR
  SmallDivOrMult <|-- DR

  BigDivOrMult <|-- DC

  class InstructionParser {
    InstructionParser(bullGamma)
    parseInstructions(hexCode): Instruction
    parseInstruction(TO, AD, OD, OF): Instruction
  }

  Instruction <. InstructionParser: Uses
}
@endDC
